styles/game.css
:root {
	--tile-hint-delay: 30s;
}
#game
{
	touch-action: none; /* Without it, touch dragging would be reset after a few moments by browser */
	fill: white;
	font-family: sans-serif;
	font-size: 100%;
}

#gridLines
{
	stroke: var(--color-highlight);
	stroke-width: 0.01;
	/* stroke-opacity: 0.5; */
	/* stroke-dasharray: 0.3 0.7;
	stroke-dashoffset: 0.15; */
	fill: none;
	opacity: 0.5;
}

.gridTile
{
	animation: animFadeIn 0.5s forwards;
}

#tutorial
{
	font-family: "Roboto Slab", serif;
	font-size: 150%;
	font-style: italic;
}

#tutorialViewTouch
{
	fill: var(--color-highlight);
	fill-opacity: 0.9;
	stroke: var(--color-highlight);
	stroke-width: 4px;
	animation-name: animtutorialViewTouch;
	animation-duration: 2.5s;
	animation-iteration-count: infinite;
	animation-timing-function: ease;
}
@keyframes animtutorialViewTouch
{
    0%
	{
		opacity: 0;
		r: 0;
    }
	30%
	{
		opacity: 0;
		r: 0;
	}
    50%
	{
        transform: translate(0, 0);
		opacity: 0.5;
		r: 20px;
    }
    90%
	{
        transform: translate(0, -130px);
		opacity: 0.5;
		r: 20px;
    }
    100%
	{
        transform: translate(0, -130px);
		r: 0;
		opacity: 0;
	}
}

.animTutorialView
{
	animation-name: animTutorialView;
	animation-duration: 1s;
	animation-iteration-count: infinite;
	animation-timing-function: ease;
	animation-direction: alternate;
}
@keyframes animTutorialView
{
    0% { transform: translate(0, 0); }
    100% { transform: translate(0, 30px); }
}

#tileHint
{
	fill: var(--color-highlight);
	fill-opacity: 0.2;

	stroke: var(--color-highlight);
	stroke-width: 0.04;
	stroke-opacity: 0.5;
}
.animTileHintDelayed
{
	opacity: 0;
	animation: animFadeIn 0.5s var(--tile-hint-delay) forwards;
}
.animTileHintLast
{
	opacity: 0;
	animation: animFadeIn 0.5s 1s forwards;
	/* fill: yellow !important;
	stroke: yellow !important;
	stroke-opacity: 1 !important; */
}
.animTileHint
{
	fill-opacity: 0;
	animation-name: animTileHint;
	animation-duration: 1.5s;
	animation-iteration-count: infinite;
	animation-timing-function: ease-out;

	/* transform-origin: 0.025% 0.045%; */
	transform-origin: 0.5px 0.5px;
}
@keyframes animTileHint
{
    0%
	{
        transform: scale(1);
		fill-opacity: 0.2;
		stroke-opacity: 1;
    }
	
    100%
	{
        transform: scale(1.4);
		fill-opacity: 0;
		stroke-opacity: 0;
    }
}

